@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -29,23 +29,24 @@ import org.springframework.beans.factory.xml.AbstractBeanDefinitionParser;
 import org.springframework.beans.factory.xml.BeanDefinitionParserDelegate;
 import org.springframework.beans.factory.xml.ParserContext;
 import org.springframework.beans.factory.xml.XmlReaderContext;
+import org.springframework.lang.Nullable;
 import org.springframework.scripting.support.ScriptFactoryPostProcessor;
 import org.springframework.util.StringUtils;
 import org.springframework.util.xml.DomUtils;
 
 /**
  * BeanDefinitionParser implementation for the '{@code <lang:groovy/>}',
- * '{@code <lang:jruby/>}' and '{@code <lang:bsh/>}' tags.
+ * '{@code <lang:std/>}' and '{@code <lang:bsh/>}' tags.
  * Allows for objects written using dynamic languages to be easily exposed with
  * the {@link org.springframework.beans.factory.BeanFactory}.
  *
- * <p>The script for each object can be specified either as a reference to the Resource
- * containing it (using the '{@code script-source}' attribute) or inline in the XML configuration
- * itself (using the '{@code inline-script}' attribute.
+ * <p>The script for each object can be specified either as a reference to the
+ * resource containing it (using the '{@code script-source}' attribute) or inline
+ * in the XML configuration itself (using the '{@code inline-script}' attribute.
  *
- * <p>By default, dynamic objects created with these tags are <strong>not</strong> refreshable.
- * To enable refreshing, specify the refresh check delay for each object (in milliseconds) using the
- * '{@code refresh-check-delay}' attribute.
+ * <p>By default, dynamic objects created with these tags are <strong>not</strong>
+ * refreshable. To enable refreshing, specify the refresh check delay for each
+ * object (in milliseconds) using the '{@code refresh-check-delay}' attribute.
  *
  * @author Rob Harrop
  * @author Rod Johnson
@@ -64,8 +65,6 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 	private static final String SCOPE_ATTRIBUTE = "scope";
 
 	private static final String AUTOWIRE_ATTRIBUTE = "autowire";
-
-	private static final String DEPENDENCY_CHECK_ATTRIBUTE = "dependency-check";
 
 	private static final String DEPENDS_ON_ATTRIBUTE = "depends-on";
 
@@ -105,6 +104,7 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 	 */
 	@Override
 	@SuppressWarnings("deprecation")
+	@Nullable
 	protected AbstractBeanDefinition parseInternal(Element element, ParserContext parserContext) {
 		// Engine attribute only supported for <lang:std>
 		String engine = element.getAttribute(ENGINE_ATTRIBUTE);
@@ -134,17 +134,13 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 		String autowire = element.getAttribute(AUTOWIRE_ATTRIBUTE);
 		int autowireMode = parserContext.getDelegate().getAutowireMode(autowire);
 		// Only "byType" and "byName" supported, but maybe other default inherited...
-		if (autowireMode == GenericBeanDefinition.AUTOWIRE_AUTODETECT) {
-			autowireMode = GenericBeanDefinition.AUTOWIRE_BY_TYPE;
+		if (autowireMode == AbstractBeanDefinition.AUTOWIRE_AUTODETECT) {
+			autowireMode = AbstractBeanDefinition.AUTOWIRE_BY_TYPE;
 		}
-		else if (autowireMode == GenericBeanDefinition.AUTOWIRE_CONSTRUCTOR) {
-			autowireMode = GenericBeanDefinition.AUTOWIRE_NO;
+		else if (autowireMode == AbstractBeanDefinition.AUTOWIRE_CONSTRUCTOR) {
+			autowireMode = AbstractBeanDefinition.AUTOWIRE_NO;
 		}
 		bd.setAutowireMode(autowireMode);
-
-		// Determine dependency check setting.
-		String dependencyCheck = element.getAttribute(DEPENDENCY_CHECK_ATTRIBUTE);
-		bd.setDependencyCheck(parserContext.getDelegate().getDependencyCheck(dependencyCheck));
 
 		// Parse depends-on list of bean names.
 		String dependsOn = element.getAttribute(DEPENDS_ON_ATTRIBUTE);
@@ -176,14 +172,13 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 		// Attach any refresh metadata.
 		String refreshCheckDelay = element.getAttribute(REFRESH_CHECK_DELAY_ATTRIBUTE);
 		if (StringUtils.hasText(refreshCheckDelay)) {
-			bd.setAttribute(ScriptFactoryPostProcessor.REFRESH_CHECK_DELAY_ATTRIBUTE, new Long(refreshCheckDelay));
+			bd.setAttribute(ScriptFactoryPostProcessor.REFRESH_CHECK_DELAY_ATTRIBUTE, Long.valueOf(refreshCheckDelay));
 		}
 
 		// Attach any proxy target class metadata.
 		String proxyTargetClass = element.getAttribute(PROXY_TARGET_CLASS_ATTRIBUTE);
 		if (StringUtils.hasText(proxyTargetClass)) {
-			Boolean flag = new Boolean(proxyTargetClass);
-			bd.setAttribute(ScriptFactoryPostProcessor.PROXY_TARGET_CLASS_ATTRIBUTE, flag);
+			bd.setAttribute(ScriptFactoryPostProcessor.PROXY_TARGET_CLASS_ATTRIBUTE, Boolean.valueOf(proxyTargetClass));
 		}
 
 		// Add constructor arguments.
@@ -220,6 +215,7 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 	 * the '{@code inline-script}' element. Logs and {@link XmlReaderContext#error} and
 	 * returns {@code null} if neither or both of these values are specified.
 	 */
+	@Nullable
 	private String resolveScriptSource(Element element, XmlReaderContext readerContext) {
 		boolean hasScriptSource = element.hasAttribute(SCRIPT_SOURCE_ATTRIBUTE);
 		List<Element> elements = DomUtils.getChildElementsByTagName(element, INLINE_SCRIPT_ELEMENT);
